button alignment fix

--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -18,6 +18,9 @@
 .copyrightplacement {
     text-align: center;
 }
+.contactalignment {
+  text-align: right;
+}
 .listtype {
   list-style-type: none;
   align-content: center;
